--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
     <!-- Header -->
     <header>
         <div class="header-content">
-            <img src="https://via.placeholder.com/150" alt="David Chung" class="profile-img">
+            <img src="dave-ua-round-sat.png" alt="David Chung" class="profile-img">
             <div class="header-text">
                 <h1>David Chung</h1>
                 <h2>Cedar Rapids School Board</h2>
