--- a/index.html
+++ b/index.html
@@ -254,8 +254,12 @@
     
     <!-- Footer -->
     <footer id="contact">
-        <p>&copy; 2025 David Chung for Cedar Rapids School Board</p>
-        <p>Contact: [Your Email] | [Your Phone] | [Social Media Links]</p>
+        <p>Paid for by Chung 4 Schools</p>
+        <p>Contact: info@chung4schools.org | (319)431-5282 | <a href="https://www.facebook.com/profile.php?id=61581074908028" target="_blank" rel="noopener noreferrer">
+  <img src="facebook-icon.png" alt="Facebook Page" style="width:24px; height:24px; vertical-align:middle;">
+  Visit our Facebook
+</a>
+</p>
     </footer>
 </body>
 </html>
