--- a/index.html
+++ b/index.html
@@ -259,6 +259,43 @@
   <img src="facebook-icon.png" alt="Facebook Page" style="width:24px; height:24px; vertical-align:middle;">
   Visit our Facebook
 </a>
+
+
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
+<!-- Contact & Social Links -->
+<div style="background-color:#222; padding:10px; text-align:center;">
+  <!-- Email -->
+  <a href="mailto:info@chung4schools.org" 
+     style="color:white; margin:0 12px; text-decoration:none;">
+    <i class="fa-solid fa-envelope fa-lg"></i>
+  </a>
+
+  <!-- Phone -->
+  <a href="tel:+13195551234" 
+     style="color:white; margin:0 12px; text-decoration:none;">
+    <i class="fa-solid fa-phone fa-lg"></i>
+  </a>
+
+  <!-- X (Twitter) -->
+  <a href="https://x.com/chung4schools" target="_blank" rel="noopener noreferrer"
+     style="color:white; margin:0 12px; text-decoration:none;">
+    <i class="fa-brands fa-x-twitter fa-lg"></i>
+  </a>
+
+  <!-- Facebook -->
+  <a href="https://www.facebook.com/profile.php?id=61581074908028" target="_blank" rel="noopener noreferrer"
+     style="color:white; margin:0 12px; text-decoration:none;">
+    <i class="fa-brands fa-facebook fa-lg"></i>
+  </a>
+
+  <!-- YouTube -->
+  <a href="https://www.youtube.com/@chung4schools" target="_blank" rel="noopener noreferrer"
+     style="color:white; margin:0 12px; text-decoration:none;">
+    <i class="fa-brands fa-youtube fa-lg"></i>
+  </a>
+</div>
+
 </p>
     </footer>
 </body>
