--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
 <!-- Contact & Social Links -->
-<div style="background-color:#222; padding:10px; text-align:center;">
+<div style="padding:10px; text-align:center;">
   <!-- Email -->
   <a href="mailto:info@chung4schools.org" 
      style="color:white; margin:0 12px; text-decoration:none;">
