--- a/index.html
+++ b/index.html
@@ -324,6 +324,7 @@
               David is running for School Board in District 2.
               <strong>All</strong> voters in the Cedar Rapids Community School District can vote for David, regardless of where they live.
             </p>
+            <p><strong>Election Day is November 4, 2025.</strong></p>
             <p>Find your polling location at the Linn County Election Services <a target="_blank" href="https://www.linncountyiowa.gov/157/Election-Services">website</a>.</p>
         </aside>
       </div>
