--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Crect width='100' height='100' fill='%231e3a8a'/%3E%3Ctext x='50' y='50' font-family='Arial, sans-serif' font-size='45' font-weight='bold' fill='white' text-anchor='middle' dominant-baseline='central'%3EDC%3C/text%3E%3C/svg%3E">
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Crect width='100' height='100' fill='%231e3a8a'/%3E%3Cpath d='M50 15 L80 35 L80 80 L20 80 L20 35 Z' fill='white'/%3E%3Crect x='42' y='55' width='16' height='25' fill='%231e3a8a'/%3E%3Crect x='30' y='40' width='12' height='12' fill='%2360a5fa'/%3E%3Crect x='58' y='40' width='12' height='12' fill='%2360a5fa'/%3E%3Cpath d='M50 15 L50 25 L45 25 L50 20 L55 25 L50 25 Z' fill='%23fbbf24'/%3E%3C/svg%3E">
     <title>Chung 4 Schools</title>
     <style>
         * {
