--- a/index.html
+++ b/index.html
@@ -296,6 +296,19 @@
             <li><a href="#reasons">A Vision for Our Schools</a></li>
             <li><a href="#election-info">Election Information</a></li>
             <li><a href="#contact">Contact</a></li>
+            <li>
+              <form action="https://www.paypal.com/donate" method="post" target="_blank">
+                <input type="hidden" name="business" value="info@chung4schools.org" />
+                <input type="hidden" name="currency_code" value="USD" />
+                <input type="hidden" name="item_name" value="Chung4Schools Donation" />
+                <button type="submit" 
+                        style="background-color:#0070ba; color:#fff; border:none; margin-top: 0px;
+                              padding:6px 8px; font-size:16px; font-weight:bold; 
+                              border-radius:6px; cursor:pointer;">
+                  Donate
+                </button>
+              </form>
+            </li>
         </ul>
     </nav>
     
